gapless fix

--- a/chrome/ShyFox/chrome/shy-top.css
+++ b/chrome/ShyFox/chrome/shy-top.css
@@ -472,7 +472,9 @@
     @media ( not ( 
       (-moz-bool-pref: "shyfox.position.navbar") or 
       ( ( not (-moz-bool-pref: "shyfox.position.navbar") ) and (-moz-bool-pref: "shyfox.vert-position.navbar") ) 
-    ) ) and (-moz-bool-pref: "shyfox.position.tabbar") and ( not ( 
+    ) ) and (
+      (-moz-bool-pref: "shyfox.position.tabbar") or ( ( not (-moz-bool-pref: "shyfox.position.tabbar") ) and (-moz-bool-pref: "shyfox.vert-position.tabbar") ) 
+    ) and ( not ( 
       (-moz-bool-pref: "shyfox.position.bookmarkbar") or 
       ( ( not (-moz-bool-pref: "shyfox.position.bookmarkbar") ) and (-moz-bool-pref: "shyfox.vert-position.bookmarkbar") ) 
     ) ) {
@@ -490,7 +492,10 @@
     @media not ( 
       (-moz-bool-pref: "shyfox.position.navbar") or 
       ( ( not (-moz-bool-pref: "shyfox.position.navbar") ) and (-moz-bool-pref: "shyfox.vert-position.navbar") ) 
-    ), not (-moz-bool-pref: "shyfox.position.tabbar") {
+    ), not ( 
+      (-moz-bool-pref: "shyfox.position.tabbar") or 
+      ( ( not (-moz-bool-pref: "shyfox.position.tabbar") ) and (-moz-bool-pref: "shyfox.vert-position.tabbar") ) 
+    ) {
       #navigator-toolbox #PersonalToolbar{
         --bmbr-hover-brs: 0px 0px var(--big-rounding) var(--big-rounding);
         --bmbr-hover-brw: 0px var(--br-wdt) var(--br-wdt) var(--br-wdt);
